--- a/app/src/main/res/layout/fragment_sign_up_office_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_office_address.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:layout_height="@dimen/action_bar_height">
 
         <TextView
             android:id="@+id/txt_signup_label"
@@ -19,13 +19,15 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:text="@string/str_signup"
+            style="@style/SignUpTitle"
             android:textColor="@color/white"
-            android:textSize="25dp" />
+             />
 
         <ImageView
             android:id="@+id/img_help"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/action_bar_icon_height"
+            android:layout_height="@dimen/action_bar_icon_height"
+            android:padding="@dimen/action_bar_icon_padding"
             android:onClick="helpButtonClicked"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
@@ -36,7 +38,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@+id/continue_layout"
         android:layout_below="@+id/top_layout">
 
@@ -44,20 +46,50 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp">
-
             <TextView
-                android:id="@+id/txt_hint_string"
-                android:layout_width="fill_parent"
+                    android:id="@+id/txt_hint_string"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="30dp"
+                    android:gravity="center_horizontal"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:text="@string/str_signup_hint6"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+            <TextView
+                android:id="@+id/add_button"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="40dp"
                 android:layout_marginLeft="15dp"
+                android:layout_centerHorizontal="true"
                 android:layout_marginRight="15dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
-                android:text="@string/str_signup_hint6"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:layout_below="@+id/txt_hint_string"
+                android:text="+ CLICK TO ADD/EDIT ADDRESS"
+                android:textColor="@color/grey"
+                android:background="@drawable/curve_white_background"
+                android:textSize="13sp" />
+<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/address_section"
+        android:visibility="visible"
+        android:clickable="true"
+        android:layout_below="@+id/add_button"
+android:orientation="vertical">
             <LinearLayout
                 android:id="@+id/address_layout"
                 android:layout_width="match_parent"
@@ -73,7 +105,7 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
-                    <EditText
+                    <com.tied.android.tiedapp.customs.ui.MyEditText
                         android:id="@+id/street"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -112,7 +144,7 @@
                 android:layout_below="@+id/address_layout"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
                 android:weightSum="1"
                 android:orientation="horizontal">
 
@@ -121,9 +153,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:gravity="center_vertical"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
-                    <EditText
+                    <com.tied.android.tiedapp.customs.ui.MyEditText
                         android:id="@+id/city"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -151,6 +184,7 @@
                     android:layout_weight="0.5"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <!--<RelativeLayout android:layout_width="100dip"-->
@@ -169,12 +203,13 @@
 
                     <!--</RelativeLayout>-->
 
-                    <EditText
+                    <com.tied.android.tiedapp.customs.ui.MyEditText
                         android:id="@+id/state"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
+                        android:layout_alignParentBottom="true"
                         android:gravity="center"
                         android:text=""
                         android:inputType="text"
@@ -186,6 +221,7 @@
                         android:id="@+id/txt_state_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
                         android:layout_centerVertical="true"
                         android:text="@string/str_state"
                         android:textSize="15sp" />
@@ -210,16 +246,17 @@
                 android:layout_below="@+id/line1"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
-                    <EditText
+                    <com.tied.android.tiedapp.customs.ui.MyEditText
                         android:id="@+id/zip"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -251,31 +288,32 @@
 
 
             </LinearLayout>
+    <LinearLayout
+            android:id="@+id/checkbox_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:visibility="gone"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
+        <ImageView
+                android:id="@+id/img_check"
+                android:layout_width="25dp"
+                android:layout_height="25dp" />
 
-            <!--  checkbox -->
-            <LinearLayout
-                android:id="@+id/checkbox_layout"
-                android:layout_width="match_parent"
+        <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/zipcode_layout"
-                android:layout_marginTop="15dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:text="@string/str_signup_hint7"
+                android:id="@+id/txt_same"
+                android:textSize="15sp"
+                android:layout_marginLeft="15dp" />
+    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/img_check"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp" />
+</LinearLayout>
+            <!--  checkbox -->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/str_signup_hint7"
-                    android:id="@+id/txt_same"
-                    android:textSize="15sp"
-                    android:layout_marginLeft="15dp" />
-            </LinearLayout>
 
         </RelativeLayout>
     </ScrollView>
