--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -68,12 +68,13 @@
                 android:textSize="16sp" />
 
             <LinearLayout
-                android:id="@+id/address_layout"
+                android:id="@+id/password_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txt_hint_string"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
 
                 <RelativeLayout
@@ -112,6 +113,24 @@
                     android:background="@color/button_material_light"
                     android:layout_marginTop="2dp" />
 
+            </LinearLayout>
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_below="@+id/password_layout"
+                          android:id="@+id/show_password"
+                          android:layout_centerHorizontal="true"
+            android:orientation="horizontal">
+                <ImageView android:layout_width="20dp"
+                           android:layout_height="20dp"
+                           android:layout_marginRight="10dp"
+                           android:id="@+id/show_password_selector"
+                android:src="@drawable/ic_selected_white"/>
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="20dp"
+                          android:textColor="@color/white"
+                          android:gravity="center_vertical"
+
+                android:text="Show Password"/>
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
