--- a/app/src/main/res/layout/fragment_sign_up_picture.xml
+++ b/app/src/main/res/layout/fragment_sign_up_picture.xml
@@ -72,6 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/select_pics"
                 android:layout_centerHorizontal="true"
+                android:visibility="gone"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:gravity="center_horizontal"
@@ -148,7 +149,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_marginRight="10dp"
-                    android:text="@string/str_continue"
+                    android:text="COMPLETE SETUP"
                     android:textColor="@color/white"
                     android:textSize="15dp" />
 
