--- a/app/src/main/res/layout/activity_line_view.xml
+++ b/app/src/main/res/layout/activity_line_view.xml
@@ -41,7 +41,7 @@
                 android:padding="10dp">
 
                 <ImageView
-                    android:id="@+id/img_close"
+                    android:onClick="onClick"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center"
@@ -59,14 +59,6 @@
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_edit"
-                    android:layout_width="24dp"
-                    android:layout_height="@dimen/action_bar_icon_height"
-                    android:layout_marginRight="15dp"
-                    android:gravity="center"
-                    android:src="@drawable/icon_edit" />
             </LinearLayout>
 
         </RelativeLayout>
@@ -83,6 +75,7 @@
             android:paddingRight="10dp">
 
             <TextView
+                android:id="@id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Line name Here"
@@ -127,6 +120,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:onClick="onClick"
         android:id="@+id/revenue_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -166,6 +160,7 @@
         android:background="@android:color/darker_gray" />
 
     <RelativeLayout
+        android:onClick="onClick"
         android:id="@+id/clients_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -205,6 +200,7 @@
         android:background="@android:color/darker_gray" />
 
     <RelativeLayout
+        android:onClick="onClick"
         android:id="@+id/goals_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -244,6 +240,7 @@
         android:background="@android:color/darker_gray" />
 
     <RelativeLayout
+        android:onClick="onClick"
         android:id="@+id/territory_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -283,6 +280,7 @@
         android:background="@android:color/darker_gray" />
 
     <RelativeLayout
+        android:onClick="onClick"
         android:id="@+id/ship_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -322,6 +320,7 @@
         android:background="@android:color/darker_gray" />
 
     <RelativeLayout
+        android:onClick="onClick"
         android:id="@+id/info_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -379,6 +378,8 @@
     </LinearLayout>
 
     <TextView
+        android:onClick="onClick"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingRight="15dp"
