--- a/app/src/main/res/layout/activity_swipe_select_client.xml
+++ b/app/src/main/res/layout/activity_swipe_select_client.xml
@@ -8,16 +8,17 @@
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="fill_parent"
-        android:layout_height="54dp"
+        android:layout_height="@dimen/action_bar_height"
         android:background="@color/schedule_title_bg_color">
 
         <ImageView
             android:id="@+id/img_close"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="@dimen/action_bar_icon_height"
+            android:layout_height="@dimen/action_bar_icon_height"
+            android:padding="@dimen/action_bar_icon_padding"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/btn_close" />
+            android:src="@drawable/btn_close" />
 
         <TextView
             android:id="@+id/txt_title"
@@ -37,33 +38,92 @@
             <!--android:layout_height="30dp"-->
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_centerVertical="true"-->
-            <!--android:src="@mipmap/checkmark"-->
+            <!--android:src="@drawable/checkmark"-->
             <!--android:layout_alignParentRight="true"/>-->
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/tab_bar"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/action_bar_height"
         android:layout_below="@+id/top_layout"
         android:background="#f3f5f6"
         android:orientation="horizontal"
-        android:paddingBottom="5dp">
+        android:paddingBottom="0dp">
+
+        <LinearLayout
+                android:id="@+id/tab_alpha"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:gravity="center"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/txt_alpha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal"
+                    android:text="ALPHABETICAL"
+                    android:textColor="@color/semi_transparent_black"
+                    android:textSize="13sp"
+                    android:textStyle="bold" />
+
+            <TextView
+                    android:visibility="gone"
+                    android:id="@+id/alpha_indicator"
+                    android:layout_gravity="bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/button_bg" />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:id="@+id/tab_distance"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:gravity="center"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/txt_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="DISTANCE"
+                    android:textColor="@color/semi_transparent_black"
+                    android:textSize="13sp"
+                    android:textStyle="bold" />
+
+            <TextView
+                    android:visibility="gone"
+                    android:id="@+id/distance_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="bottom"
+                    android:layout_height="2dp"
+                    android:background="@color/button_bg" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/tab_last_visited"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
-            android:gravity="bottom"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_last_visited"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
                 android:text="LAST VISITED"
                 android:textColor="@color/semi_transparent_black"
                 android:textSize="13sp"
@@ -72,65 +132,15 @@
             <TextView
                 android:visibility="gone"
                 android:id="@+id/last_visited_indicator"
+                android:layout_gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/button_bg" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/tab_distance"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="bottom"
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txt_distance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:text="DISTANCE"
-                android:textColor="@color/semi_transparent_black"
-                android:textSize="13sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/distance_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/button_bg" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/tab_alpha"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="bottom"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/txt_alpha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:text="ALPHABETICAL"
-                android:textColor="@color/semi_transparent_black"
-                android:textSize="13sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/alpha_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/button_bg" />
-
-        </LinearLayout>
 
 
     </LinearLayout>
