--- a/app/src/main/res/layout/main_activity_drawer_header.xml
+++ b/app/src/main/res/layout/main_activity_drawer_header.xml
@@ -29,7 +29,7 @@
                     android:layout_marginRight="15dp"
                     android:src="@drawable/default_avatar" />
             <TextView android:layout_width="wrap_content"
-                      android:text="Emily Dobson"
+                      android:text=""
                       android:id="@+id/full_name_tv"
                       android:layout_marginTop="30dp"
                       android:layout_centerHorizontal="true"
@@ -38,7 +38,7 @@
                       android:layout_alignParentTop="true"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
-                      android:text="emily@dobson.com"
+                      android:text=""
                       android:id="@+id/email_tv"
                       android:textColor="@color/white"
                       android:layout_below="@+id/full_name_tv"
