--- a/app/src/main/res/layout/schedule_list.xml
+++ b/app/src/main/res/layout/schedule_list.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+              android:orientation="vertical"
+              android:gravity="center_horizontal"
     android:layout_height="match_parent">
+
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:id="@+id/list" />
-</LinearLayout>
+    <ProgressBar android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_centerInParent="true"
+                 android:id="@+id/progress_bar"
+    android:indeterminate="true"/>
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textColor="@color/light_gray2"
+              android:layout_gravity="center_vertical"
+              android:layout_centerInParent="true"
+              android:layout_marginTop="30dp"
+              android:id="@+id/empty_schedule"
+              android:padding="10dp"
+              android:textSize="15sp"
+
+              android:text="You have nothing scheduled for this period!"/>
+</RelativeLayout>
