--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -10,9 +10,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/time"
         android:text=""
+        android:textColor="@color/white"
         android:padding="3dp"
         android:textStyle="bold"
-        android:textSize="12sp" />
+        android:textSize="10sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
