--- a/app/src/main/res/layout/schedule_select_client_list_general.xml
+++ b/app/src/main/res/layout/schedule_select_client_list_general.xml
@@ -23,7 +23,7 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="0dp"
-                    android:text="Add New Line"
+                    android:text="Select Client"
                     android:textColor="@color/white"
                     android:textSize="15sp" />
 
@@ -81,8 +81,10 @@
             android:paddingBottom="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
-            android:paddingTop="10dp">
 
+            android:paddingTop="10dp">
+            <View android:layout_width="0dp" android:layout_height="0dp" android:focusable="true"
+                  android:id="@+id/getFocus" ></View>
             <EditText
                 android:id="@+id/search"
                 android:layout_width="match_parent"
